[docs] Updated classifiers and add badges

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,22 @@ readme = "README.md"
 license = { text = "Apache-2.0" }
 keywords = ["android", "sms", "gateway"]
 dynamic = ["version"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Communications :: Telephony",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Typing :: Typed",
+]
 
 [tool.setuptools.dynamic]
 version = { attr = "android_sms_gateway.__version__" }
