--- a/Pipfile
+++ b/Pipfile
@@ -19,13 +19,13 @@ importlib-metadata = "*"
 python_version = "3"
 
 [requests]
-requests = "*"
+requests = "~=2.31"
 
 [httpx]
-httpx = "*"
+httpx = "~=0.26"
 
 [aiohttp]
-aiohttp = "*"
+aiohttp = "~=3.9"
 
 [encryption]
-pycryptodome = "*"
+pycryptodome = "~=3.20"
